# app/src/main/java/com/zextras/carbonio/user_management/rest/dto/UserInfoDto.java
@@ -7,10 +7,24 @@ package com.zextras.carbonio.user_management.rest.dto;
 import com.zextras.carbonio.user_management.record.UserInfo;
 
 public record UserInfoDto(
-    String userId, String email, String fullName, String domain, String status, String type) {
+    String userId,
+    String email,
+    String fullName,
+    String domain,
+    String status,
+    String type,
+    String cosId,
+    String domainId) {
 
   public static UserInfoDto from(UserInfo info) {
     return new UserInfoDto(
-        info.userId(), info.email(), info.fullName(), info.domain(), info.status(), info.type());
+        info.userId(),
+        info.email(),
+        info.fullName(),
+        info.domain(),
+        info.status(),
+        info.type(),
+        info.cosId(),
+        info.domainId());
   }
 }
